--- a/package.json
+++ b/package.json
@@ -30,16 +30,23 @@
     "prelaunch": "vite-node build.ts launch"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.7",
+    "@eslint/js": "^9.21.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.13.8",
     "@types/vscode": "^1.97.0",
     "@vscode/vsce": "^3.2.2",
     "comment-json": "^4.2.5",
+    "eslint": "^9.21.0",
+    "globals": "^16.0.0",
+    "jiti": "^2.4.2",
     "prettier": "^3.5.2",
     "prettier-plugin-sh": "^0.15.0",
     "rollup": "^4.34.9",
     "tslib": "^2.8.1",
+    "typescript": "5.7.3",
+    "typescript-eslint": "^8.25.0",
     "vite-node": "^3.0.7"
   }
 }
