--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prettier": "^3.5.2",
     "prettier-plugin-sh": "^0.15.0",
     "rollup": "^4.34.9",
+    "strip-json-comments": "^5.0.1",
     "tslib": "^2.8.1",
     "typescript": "5.7.3",
     "typescript-eslint": "^8.25.0",
